# cb_jtag_probe_fw

./: .gitignore  cb_jtag_probe_M33.jdebug  west.yml
app/: CMakeLists.txt  Makefile  envsetup.sh  prj.conf
app/boards/: rpi_pico2_cb_jtag_probe.dtsi  rpi_pico2_rp2350a_hazard3.overlay
app/src/: info.c  info.h  jtag_engine.c  jtag_proto.h  main.c  usb_bulk_jtag.c  usb_jtag_transport.c
build_helpers/cmake/: fw_version.h.in  git.example.in  git_watcher.cmake
testing/: cb_jtag_probe.py
tests/: Makefile  hardware-map.yml  requirements.txt
tests/test_app_build/: CMakeLists.txt  testcase.yaml
tests/test_probe/: test_probe_interface.py  testcase.yaml
